package org.example;

public class File extends FileSystemEntity {

    public File(String name, Folder parent) {
        super(name, parent);
    }

}
